// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`seed: correctly generates seed data 1`] = `
Array [
  Object {
    "animal": "Dog",
    "birthday": "2019-10-10T18:26:07.269Z",
    "id": "70c6744ccba25f4c8a060dac0",
    "name": "ro",
  },
  Object {
    "animal": "Dog",
    "birthday": "2019-10-10T18:26:07.269Z",
    "id": "e0fd2b7413045a84aba00471e",
    "name": "pub",
  },
  Object {
    "animal": "Dog",
    "birthday": "2019-10-10T18:26:07.269Z",
    "id": "ec57e13d4ca057209469b4d3a",
    "name": "luhredad",
  },
  Object {
    "id": "171deaa8666754b989882fbbf",
    "name": "rij",
    "price": -685278096261.12,
  },
  Object {
    "id": "8763d7e2361b52bd92f469cd4",
    "name": "vaopu",
    "price": -368153618861.2608,
  },
  Object {
    "id": "827dc199f7b95f9ba1a88eac3",
    "name": "ofhi",
    "price": 104667262065.0496,
  },
  Object {
    "address": "zeholip",
    "id": "fb0e0de66ece5ae48aae95d5c",
    "numberOfRooms": 2076286561,
  },
  Object {
    "address": "om",
    "id": "38b78cf36a8455da8df5c0611",
    "numberOfRooms": 1620660189,
  },
  Object {
    "address": "vonlavub",
    "id": "d5c80333d0b05399aef689891",
    "numberOfRooms": -928052335,
  },
  Object {
    "email": "wi",
    "id": "326250dcad2f56f595e4b3f5e",
    "isActive": true,
    "name": "titpoviv",
    "pet": Object {
      "connect": Object {
        "id": "70c6744ccba25f4c8a060dac0",
      },
    },
  },
  Object {
    "email": "pe",
    "id": "5ac0020e9f6a59f19008ee1d8",
    "isActive": false,
    "name": "wundevuj",
    "pet": Object {
      "connect": Object {
        "id": "e0fd2b7413045a84aba00471e",
      },
    },
  },
]
`;

exports[`seed: correctly seeds the data 1`] = `
Array [
  Array [
    Object {
      "address": "liov",
      "id": "2e4a75ac020e59f69f134008b",
      "numberOfRooms": 841941561,
    },
    Object {
      "address": "cotub",
      "id": "531461adfc7b5fbbae80c2ab7",
      "numberOfRooms": -1026954061,
    },
    Object {
      "address": "ebri",
      "id": "9fa14b24af2c50e89eaaef3cf",
      "numberOfRooms": 174526510,
    },
    Object {
      "address": "cok",
      "id": "bbd450fc3e9f586c83ee17e84",
      "numberOfRooms": 1270419855,
    },
    Object {
      "address": "oho",
      "id": "c6c0036f71e156beab8161ac9",
      "numberOfRooms": 1953631503,
    },
  ],
  Array [
    Object {
      "animal": "Dog",
      "birthday": "2019-10-10T18:26:07.269Z",
      "id": "171deaa8666754b989882fbbf",
      "name": "rij",
    },
    Object {
      "animal": "Dog",
      "birthday": "2019-10-10T18:26:07.269Z",
      "id": "70c6744ccba25f4c8a060dac0",
      "name": "ro",
    },
    Object {
      "animal": "Dog",
      "birthday": "2019-10-10T18:26:07.269Z",
      "id": "8763d7e2361b52bd92f469cd4",
      "name": "vaopu",
    },
    Object {
      "animal": "Dog",
      "birthday": "2019-10-10T18:26:07.269Z",
      "id": "e0fd2b7413045a84aba00471e",
      "name": "pub",
    },
    Object {
      "animal": "Dog",
      "birthday": "2019-10-10T18:26:07.269Z",
      "id": "ec57e13d4ca057209469b4d3a",
      "name": "luhredad",
    },
  ],
  Array [
    Object {
      "id": "326250dcad2f56f595e4b3f5e",
      "name": "titpoviv",
      "price": -549001428048.2816,
    },
    Object {
      "id": "38b78cf36a8455da8df5c0611",
      "name": "om",
      "price": 679754151336.3456,
    },
    Object {
      "id": "827dc199f7b95f9ba1a88eac3",
      "name": "ofhi",
      "price": 104667262065.0496,
    },
    Object {
      "id": "d5c80333d0b05399aef689891",
      "name": "vonlavub",
      "price": -389253362089.984,
    },
    Object {
      "id": "fb0e0de66ece5ae48aae95d5c",
      "name": "zeholip",
      "price": 870857702794.8544,
    },
  ],
  Array [
    Object {
      "email": "sewcuh",
      "id": "54d01f2e83d157a08f9a909be",
      "isActive": false,
      "name": "jiz",
    },
    Object {
      "email": "vec",
      "id": "593383554b055a8494515c273",
      "isActive": false,
      "name": "gegaba",
    },
    Object {
      "email": "rilleh",
      "id": "5af8ee2b6f595a6193c147406",
      "isActive": false,
      "name": "rugvozec",
    },
    Object {
      "email": "sadod",
      "id": "8b16db186cb35d04998d9047f",
      "isActive": false,
      "name": "hudiha",
    },
    Object {
      "email": "fos",
      "id": "a098bff0502455b2bf3570777",
      "isActive": false,
      "name": "norer",
    },
  ],
]
`;
